--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Hello World!!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Day-01</title>
+</head>
+<body>
+<h1>This is the first</h1>
+</body>
+</html>
